--- a/solutions/introductory_workshop/01_ask_llm.ipynb
+++ b/solutions/introductory_workshop/01_ask_llm.ipynb
@@ -392,7 +392,7 @@
    "source": [
     "#### Exercise 1 (e): Chat completion using a prompty file for context\n",
     "\n",
-    "In Dapr Agents, we can use prompty to provide additional context/history to our LLM. Before running the cells below, nalyze its contents of `prompt_text`."
+    "In Dapr Agents, we can use prompty to provide additional context/history to our LLM. Before running the cells below, analyze the contents of `prompt_text`."
    ]
   },
   {
