Small formatting fixes

--- a/solutions/introductory_workshop/01_ask_llm.ipynb
+++ b/solutions/introductory_workshop/01_ask_llm.ipynb
@@ -304,14 +304,28 @@
    "source": [
     "response = llm.generate(\n",
     "    messages=[UserMessage(\"Give me a list of 5 random hobbies. Return just the hobby names.\")]\n",
-    ")\n",
-    "print(\"\\n\")\n",
-    "single_word = llm.generate(\n",
-    "    messages=[UserMessage(\"What is one word that best describes the feeling of finishing a long project?\")]\n",
-    ")\n",
-    "print(\"\\n\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "story = llm.generate(\n",
     "    messages=[UserMessage(\"Write a short story about a lost key that opens a magical door in an ancient library.\")]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "single_word = llm.generate(\n",
+    "    messages=[UserMessage(\"What is one word that best describes the feeling of finishing a long project?\")]\n",
     ")"
    ]
   },
@@ -469,7 +483,7 @@
    "source": [
     "#### Troubleshooting\n",
     "\n",
-    "1. **API Key Issues**: If you see an authentication error, verify your OpenAI API key in the `.env` file\n",
+    "1. **API Key Issues**: If you see an authentication error, verify your HuggingFace API key in the `helper_secrets.py` file\n",
     "2. **Python Version**: If you encounter compatibility issues, make sure you're using Python 3.10+\n",
     "3. **Environment Activation**: Ensure your virtual environment is activated before running examples\n",
     "4. **Import Errors**: If you see module not found errors, verify that `pip install -r requirements.txt` completed successfully"
