--- a/workshop/introductory_workshop/01_ask_llm.ipynb
+++ b/workshop/introductory_workshop/01_ask_llm.ipynb
@@ -432,7 +432,7 @@
    "source": [
     "#### Troubleshooting\n",
     "\n",
-    "1. **API Key Issues**: If you see an authentication error, verify your OpenAI API key in the `.env` file\n",
+    "1. **API Key Issues**: If you see an authentication error, verify your HuggingFace API key in the `helper_secrets.py` file\n",
     "2. **Python Version**: If you encounter compatibility issues, make sure you're using Python 3.10+\n",
     "3. **Environment Activation**: Ensure your virtual environment is activated before running examples\n",
     "4. **Import Errors**: If you see module not found errors, verify that `pip install -r requirements.txt` completed successfully"
