Shorten first notebook

--- a/solutions/introductory_workshop/01_ask_llm.ipynb
+++ b/solutions/introductory_workshop/01_ask_llm.ipynb
@@ -357,7 +357,7 @@
     "id": "yo-uLJ0GSK8N"
    },
    "source": [
-    "#### Exercise 1 (d): Parameter tweaking\n",
+    "#### [Optional] Exercise 1 (d): Parameter tweaking\n",
     "\n",
     "You can also try experimenting with model parameters, for example:\n",
     "\n",
@@ -404,7 +404,7 @@
     "id": "0a9nbyvpPuvG"
    },
    "source": [
-    "#### Exercise 1 (e): Chat completion using a prompty file for context\n",
+    "#### [Optional] Exercise 1 (e): Chat completion using a prompty file for context\n",
     "\n",
     "In Dapr Agents, we can use prompty to provide additional context/history to our LLM. Before running the cells below, analyze the contents of `prompt_text`."
    ]
