--- a/solutions/introductory_workshop/03_creating_an_agent.ipynb
+++ b/solutions/introductory_workshop/03_creating_an_agent.ipynb
@@ -624,7 +624,7 @@
     "id": "mglLmxZTz8KZ"
    },
    "source": [
-    "[Optional] Exercise 3 (d): Add more tools\n",
+    "#### [Optional] Exercise 3 (e): Add more tools\n",
     "\n",
     "Explore ideas to enhance our productivity bot! For instance, you could integrate a tool that retrieves the current weather and recommends appropriate clothing, or one that shares motivational quotes to inspire users."
    ]
